[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.2.0-beta-rc.1"
hdk = "0.1.0-beta-rc.1"
serde = "1"

[workspace.dependencies.directory]
path = "dnas/herd/zomes/coordinator/directory"

[workspace.dependencies.directory_integrity]
path = "dnas/herd/zomes/integrity/directory"

[workspace.dependencies.herd]
path = "dnas/herd/zomes/coordinator/herd"

[workspace.dependencies.herd_integrity]
path = "dnas/herd/zomes/integrity/herd"

[workspace.dependencies.posts]
path = "dnas/herd/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/herd/zomes/integrity/posts"
