[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.1"
hdk = "=0.2.1"
serde = "1"

[workspace.dependencies.directory]
path = "dnas/directory/zomes/coordinator/directory"

[workspace.dependencies.directory_integrity]
path = "dnas/directory/zomes/integrity/directory"

[workspace.dependencies.profiles]
path = "dnas/directory/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/directory/zomes/integrity/profiles"

[workspace.dependencies.herd]
path = "dnas/herd/zomes/coordinator/herd"

[workspace.dependencies.herd_integrity]
path = "dnas/herd/zomes/integrity/herd"

[workspace.dependencies.posts]
path = "dnas/herd/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/herd/zomes/integrity/posts"